CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.


Version 1.6.1
------------------------------------------------------------------
5 September 2007
+ File - Really, truly fixed the slash detection on copy_directory
  function. 
+ Database
  o Lowercased nulls.
  o loadObject will return an error if an object is submitted without
    an id. Added the name of the class to the error log to assist with
    debugging.
  o Adding module and class_name to getObjects was a big mistake. I
    forgot that extra args are sent to the class contructor. Created a
    function in Database called loadClass to replicate the
    functionality.
+ Comment added to Core
+ Moved Eloi's name up in credits for xmlrpc.
+ Core changes moved into new directory in
  core/boost/changes/. Shortens update file.


31 August 2007
+ Text
   o Bug #1781552. Shortened urls now adds 3 characters to balance
     '...' replacement.
   o Added newline check to collapseUrl function.
+ Editors
  o added yui, Yahoo!'s Rich text editor
  o Added autogrow to fckeditor and increased the height.

30 August 2007
+ Database - getObjects now accepts the module and class filename as
  the second and third parameter. Prevents the class getting loaded
  until the results are verified.
+ xmlrpc - too many changes to list. The following is working:
  o listing entries
  o listing categories
  o posting new entry
  o editing previous entry (except in bloGTK)
  o deleting entry
+ There will only be one config.tpl in the new core and it will reside
  in core/inc. Branch and setup have been changed to grab the file
  from there.
  

29 August 2007
+ Added pears XML libs to default installation
+ Adding modified version of Eloi George's xml-rpc server

27 August 2007
+ Database
  o Added portability mode to database factory files.
  o Portability allowed removal of autoTrim function.
+ Default Theme - added theme tag and styling for a top menu

26 August 2007