@@ -224,7 +224,11 @@ class IXR_Message {
                 $valueFlag = true;
                 break;
             case 'base64':
-                $value = base64_decode($this->_currentTagContents);
+                /**
+                 * modified : 2007/09/07 Matt McNaney
+                 * could not get this to work properly without the trim addition
+                 */ 
+                $value = base64_decode(trim($this->_currentTagContents));
                 $this->_currentTagContents = '';
                 $valueFlag = true;
                 break;
